--- a/styles.css
+++ b/styles.css
@@ -71,13 +71,15 @@ body {
 #team {
   background-color: #f9f9f9;
   padding: 50px 0;
-  
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
 #team h2 {
   font-size: 36px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .members {
